# SDL_Engine

./: .gitignore  .ignore  CMakeCache.txt  CMakeLists.txt  Makefile  SDL_test  Test-Math  cmake_install.cmake  compile_commands.json  test.nu
.cache/clangd/index/: Game.cpp.249F858345212516.idx  Game.cpp.932FE181648478EA.idx  Game.cpp.D78E21A6EB5B421E.idx  Game.hpp.4ED0F50C653C2119.idx  Game.hpp.B3D016F611B36E4B.idx  Game.hpp.BF9C43C9E9B1B7D3.idx  Input.cpp.29503471DD043C33.idx  Input.cpp.E63D1861F023A584.idx  Input.cpp.E69AD83789631CC2.idx  Input.hpp.8A54D6313CF57BFA.idx  Input.hpp.A11DF5511CBB1857.idx  Input.hpp.C196D28929063D5C.idx  Scene.cpp.082407332DD6ECD7.idx  Scene.cpp.8A8683190D7D7C6A.idx  Scene.cpp.B2A838F6A2B106D3.idx  Scene.hpp.2B26B09EB5239A33.idx  Scene.hpp.431753AABD25C0F2.idx  Scene.hpp.4579874E99C888EC.idx  TestScene1.cpp.8DF44FAE85E2DD31.idx  TestScene1.hpp.22A4F7C7F0F1EDD8.idx  TestScene1.hpp.AF6E0D24CF31FEDD.idx  TestScene2.hpp.2A7EE0D8FFA675A5.idx  TestScene2.hpp.595970BC3F4AC143.idx  Timer.cpp.140D976F7CECB851.idx  Timer.hpp.9509DB0B4DE39B9E.idx  Vector.cpp.7B4167136276D21E.idx  Vector.hpp.38B604EBA27E11DE.idx  main.cpp.A5FD7243E4F0F3B6.idx  test.cpp.AB0C62B0FF1AC14F.idx
.cmake/api/v1/reply/: cache-v2-90742a951e6582fe1182.json  cache-v2-f45aa0bffac37578dd71.json  cmakeFiles-v1-238b7123a274d5f3851e.json  cmakeFiles-v1-d2872f4ead32fa0ea4b6.json  codemodel-v2-00006ebcbdecacc58b9a.json  codemodel-v2-de4f26bd5e9a7b39f81a.json  (+8 more)
Engine/: CMakeLists.txt  Makefile  cmake_install.cmake
Engine/Gameobject/: CMakeLists.txt
Engine/Gameobject/Components/: CMakeLists.txt
Engine/Gameobject/Components/src/: Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Transform.cpp  Transform.hpp  test.cpp
Engine/Gameobject/src/: Component.cpp  Component.hpp  Gameobject.cpp  Gameobject.hpp  keep.cpp  test.cpp
Engine/Math/: CMakeLists.txt  Makefile  MathTest[1]_include.cmake  Test  cmake_install.cmake
Engine/Math/src/: Vector.hpp  test.cpp
Engine/src/: Exceptions.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Scene.cpp  Scene.hpp  Timer.cpp  Timer.hpp
src/: TestScene1.cpp  TestScene1.hpp  TestScene2.cpp  TestScene2.hpp  main.cpp
src/Engine/: Makefile  cmake_install.cmake
